# ResearchAgent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ENHANCEMENT_SUMMARY.md  MANIFEST.in  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  streamlit_app.py
.github/workflows/: ci.yml
notebooks/: research_agent.ipynb
scripts/: validate_setup.py
src/: __init__.py  agent_graph.py  data_extraction.py  data_processing.py  embeddings.py  main.py  tools.py
tests/: conftest.py  test_data_extraction.py  test_data_processing.py  test_integration.py  test_tools.py
